JSW Devsb/src/objects/State_NSR_Actuals__c.object
<CustomObject>
    <fields>
        <fullName>Commercial_Invoice_Date__c</fullName>
        <label>Commercial Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSR_C_F_Actuals__c</fullName>
        <label>NSR C&amp;F Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Discount_Value_Actuals__c</fullName>
        <label>NSR Discount Value Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_MMC_Actuals__c</fullName>
        <label>NSR MMC Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Other_Actuals__c</fullName>
        <label>NSR Other Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_PD_SPL_ADDL_Actual__c</fullName>
        <label>NSR PD+SPL+ADDL Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_PRFT_Dump_Value_Actual__c</fullName>
        <label>NSR PRFT Dump Value Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Packing_Cost_Actual__c</fullName>
        <label>NSR Packing Cost Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Qty_Actuals__c</fullName>
        <label>NSR Qty Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_T_Actuals__c</fullName>
        <label>NSR/T Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Total_Basic_Price_Actuals__c</fullName>
        <label>NSR Total Basic Price Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Value_Actuals__c</fullName>
        <label>NSR Value Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>TEXT( State_MRM_Targets__r.Product_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_MRM_Targets__c</fullName>
        <label>State MRM Targets</label>
        <referenceTo>State_MRM_Targets__c</referenceTo>
        <relationshipLabel>State NSR Actuals</relationshipLabel>
        <relationshipName>State_NSR_Actuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>State NSR Actuals</label>
    <nameField>
        <label>State NSR Actuals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State NSR Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>